--- a/src/views/pages/index.twig
+++ b/src/views/pages/index.twig
@@ -10,17 +10,7 @@
     <div class="home-theme" style="background: #ffffff;">
         <div id="scroll-footprints" class="scroll-footprints" aria-hidden="true"></div>
         <div id="scroll-character" class="scroll-character" aria-hidden="true">
-            <div class="character-shadow"></div>
-            <div class="character-head">
-                <span class="character-eye"></span>
-                <span class="character-eye"></span>
-            </div>
-            <div class="character-body"></div>
-            <div class="character-arm"></div>
-            <div class="character-legs">
-                <span></span>
-                <span></span>
-            </div>
+            <div class="scroll-arrow"></div>
         </div>
         <section class="relative overflow-hidden" style="background: #ffffff;">
             <div class="absolute -top-24 -right-24 h-96 w-96 rounded-full bg-gradient-to-br from-violet-300/40 via-purple-200/40 to-blue-200/10 blur-[140px]"></div>
